# bear-den

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_NOTES.md  DEN_ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  HUMANS.md  MULTIUSER_PROXY_ARCHITECTURE.md  PHASE1_BOOTSTRAP.md  PLAN.md  README.md  docker-compose.codepool-src.yaml  docker-compose.den-src.yaml  docker-compose.yaml  litellm-config.yaml  tasks.md
.cursor/plans/: bear_memfs_head_ui_ef2450cc.plan.md  memory_manager_rename_4b2c1a.md  modern_letta_memfs_bears_fabf06fb.plan.md
.cursor/rules/: deep-chat-styling.mdc
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  install-workspace-tools.sh  post-create.sh
.github/workflows/: acp-adapter-release.yml  acp-adapter.yml  codepool-image.yml  coolify-deploy.yml  den-image.yml
.kilocode/memory_bank/: README.md  agentic-assistant-architecture.md  memory_architecture_brief.md  project_brief.md
archive/: DEPLOYMENT-old.md  docker-compose.yaml
bears-acp-adapter/: index.html
bears-acp-adapter/stable/: aarch64-apple-darwin.json  (+4 more)
code-pool/: .env.example  COOLIFY_DEPLOY.md  Dockerfile
codepool/: .env.example  COOLIFY_DEPLOY.md  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  package-lock.json  package.json
content-template/: .gitignore  README.md
den/: .env.example  AGENTS.md  COOLIFY_DEPLOY.md  Cargo.toml  Dockerfile  README.md  build.rs
den/.cargo/: config.toml
den/.devcontainer/: docker-compose.yml
den/.sqlx/: query-0d9dde4d5476f65e8628027adb5bfd81866072ed31951281fac4d3841a40f1f7.json  query-1e461b6793d0c4a62f850d5e45ff2cac1402484a688b4b5b4d041b5ad17ceb56.json  query-21bf3d6802c86729e5ad23260f1488f0e68bc183dfc3443808b57c528e49d97c.json  query-608b0077509fc4bbb74169209d9f236f54b7681dfe304c5405ad51cef725aa8c.json  query-62a81405d376df1437fbba24c1d1c293fac1827340cc2697a10e7ede5530b22d.json  query-68336fd0b1e955e1f9505345551796c6c7a3172c935d7e78e1320ec66f823d3e.json  query-b39d9cd2cc82561a10ee9b78b3afeccb8ac1d5a8d9d4cf7f2f07868412312996.json  query-becab36e51c5da77a331604800dc171838c293c4c89393ad480158bfc8324a18.json  query-cc93a18c471784d8bac96405fc54bb7fb8cad2991e97746230adffb743cb3cb9.json  query-dec3ba26bcda52b8e1e645adfeab965120ebc3d441ae640f9fa7e397124901f2.json  query-e663a650a18fadaf7246e9890d2b5281c850ab2d5d73c733eeda4ef44ca7909e.json  query-e79019dfa5c5c370f799b45f4f09d1bbdba866ac7295ae50985e471e13080f97.json
den/defaults/: org_policy.md
den/docs/: README.md  axum-in-this-repo.md  deploy.md  development-principles.md  frontend-development.md  infrastructure-and-ops.md  minijinja-template-limitations.md  quickstart.md  rename-from-starter.md
den/migrations/: 20250331120000_phase1_den_registry.up.sql  20250401130000_phase1_bootstrap_admin.up.sql  20250402130000_phase1_remove_bear_templates.up.sql  20250403120000_phase1_bear_templates.up.sql  20260421120000_bear_runtime_plan.up.sql  README.md
den/plans/: README.md
den/src/: auth_backend.rs  build_info.rs  config.rs  lib.rs  main.rs  startup.rs
den/src/api/: docs.rs  service.rs
den/src/api/oauth/: db.rs  endpoints.rs  jwt.rs  mod.rs  router.rs  utils.rs
den/src/api/v1/: profile.rs
den/src/core/: api_utils.rs  memory_manager_head.rs  mod.rs
den/src/core/bears/: db.rs  letta_code_harness.rs  letta_drift.rs  lettabot.rs  mod.rs  model.rs  provision.rs  rollout.rs  runtime_plan.rs  sync.rs
den/src/core/codepool/: client.rs  mod.rs
den/src/core/email/: mod.rs
den/src/core/email/templates/: test_email.html
den/src/core/letta/: agent_diagnostics.rs  agent_document.rs  agent_prefill.rs  agent_summary.rs  client.rs  conversation_title.rs  mod.rs  tool_policy.rs
den/src/core/s3/: mod.rs
den/src/core/user/: db.rs  email_settings.rs
den/src/core/user/invites/: db.rs
den/src/errors/: mod.rs
den/src/web/: ROUTES.md  bear_create_support.rs  bear_management.rs  bears_health.rs  home.rs  loquix.rs  mod.rs  public.rs  status.rs
den/src/web/admin/: api.rs  bear_templates.rs  bears.rs  mod.rs  oauth_clients.rs  ops.rs  users.rs
den/src/web/assets/: manifest.json
den/src/web/assets/css/: common.css  layout.css  menu.css  specifics.css  style.css
den/src/web/assets/loquix/: VERSION  loquix-register.js  loquix.min.js  variables.css
den/src/web/assets/loquix/themes/: dark.css
den/src/web/static/: deep_chat_app.html  loquix_app.html
den/src/web/templates/: README.md  base.html  bear_chat.html  bears_health.html  dashboard.html  dashboard_empty.html  forms.jinja
den/src/web/templates/account/: register.html  view.html
den/src/web/templates/admin/: base.html  harness_pool.html  letta_code_harness.html  lettabot.html  menu.html
den/src/web/templates/admin/bear_templates/: add.html  list.html
den/src/web/templates/admin/bears/: detail.html  edit.html  list.html  new.html  unlinked_letta_agents.html
den/src/web/templates/admin/oauth_clients/: list.html  view.html
den/src/web/templates/admin/users/: edit.html  view.html
den/src/web/templates/bear/: details.html  edit.html  edit_configuration.html
den/src/web/templates/settings/: edit.html
den/src/web/templates/settings/email/: verify_sent.html
den/src/web/user/: session.rs
den/src/web/user/account/: mod.rs
den/src/web/user/settings/: email.rs  mod.rs
den/src/web/v1/: mod.rs
den/tests/: bootstrap_admin_passhash.rs  phase1_m1_schema.rs  web_health.rs
docs/: ACP_TROUBLESHOOTING.md  README.md  acp-lessons.md  artifacts-garage-adr.md  den-conversation-runtime-schema.md  dynamic-skills-subagents-adr.md  letta-dependency-matrix.md  letta-migration-plan.md  multi-user-memory-adr.md  rename-checklist.md  rename-technical-inventory.md  routines-automation-adr.md
onyx_config/: onyx.yaml
projects/: README.md
scripts/: devcontainer-start.sh  logs.sh  restart.sh  seed-dev.sh  smoke-stack.sh  smoke.sh
tools/bears-acp-adapter/: Cargo.toml  README.md  build.rs
tools/bears-acp-adapter/src/: approvals.rs  json_rpc.rs  main.rs  paths.rs  tool_tasks.rs  update.rs
tools/bears-acp-adapter/src/tools/: adapter_env.rs  chrome.rs  fs.rs  git.rs  mcp.rs  mod.rs  process.rs  terminal.rs  web.rs
(+757 files in other folders)
