[package]
name = "bears-acp-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-client-protocol = { version = "0.11.1", features = ["unstable_auth_methods", "unstable_session_close", "unstable_session_resume"] }
anyhow = "1.0"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }
