[package]
name = "bears-acp-adapter"
version = "0.1.2"
edition = "2021"

[dependencies]
agent-client-protocol = { version = "0.11.1", features = ["unstable_auth_methods", "unstable_session_close", "unstable_session_resume"] }
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rmcp = { version = "1.2.0", default-features = false, features = ["client", "server", "schemars", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
schemars = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "time", "process", "net"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7"
tower-service = "0.3"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
time = { version = "0.3", features = ["formatting"] }
